# cli-template

./: .gitignore  .pyportion.yml  README.md
.portions/: command.py  handler.py  model.py
base/: .gitignore  LICENSE  pyproject.toml
base/cli/: cli.py
base/cli/base/: __init__.py  command.py
base/cli/commands/: __init__.py  version.py
base/cli/core/: __init__.py  terminal.py
base/cli/handlers/: __init__.py  version.py
base/cli/models/: __init__.py  config.py  message.py
