[project]
name = "project-name"
version = "1.0.0"
description = "project-description"
authors = []
license-files = ["LICENSE"]

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "platformdirs (==4.4.0)",
    "typer (>=0.20.0,<0.21.0)",
    "ruamel-yaml (>=0.18.16,<0.19.0)",
    "rich (>=14.2.0,<15.0.0)",
    "questionary (>=2.1.1,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-bugbear (>=24.12.12,<25.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8-pyproject (>=1.2.4,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "cli" }]

[project.scripts]
cli = "cli.__main__:main"

[tool.isort]
force_single_line = true
include_trailing_comma = true
use_parentheses = true

[tool.flake8]
extend-immutable-calls = ["typer.Option"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
mypy_path = "."
namespace_packages = true
explicit_package_bases = true
check_untyped_defs = true
exclude = [
    "^tests/utils/",
]
